--- a/css/blocks/btn.scss
+++ b/css/blocks/btn.scss
@@ -4,10 +4,7 @@
   font-size: 19px;
   font-family: "AlegreyaSansExtraBold";
   background: $white;
-  padding-bottom: 16px;
-  padding-right: 34px;
-  padding-left: 34px;
-  padding-top: 16px;
+  padding: 16px 34px;
   border: none;
   border-radius: 50px;
   color:#006633;
