--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   &__link{
     text-decoration: none;
-    color:$white;
+    color:inherit;
     
   }
   &__item{
