--- a/css/blocks/phone.scss
+++ b/css/blocks/phone.scss
@@ -1,7 +1,7 @@
 .phone{
   &__link{
     text-decoration: none;
-    color:$white;
+    color:inherit;
     font-size: 24px;
     &:before {
       content: url("/icons/phone.png");
