--- a/css/blocks/user.scss
+++ b/css/blocks/user.scss
@@ -2,22 +2,21 @@
   width: 94px;
   height: 94px;
   border-radius: 50%;
-
+  margin-right: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  margin: 20px;
+  border: 8px solid transparent;
   &__avatar {
-    width: 102px;
-    width: 102px;
-    
-    
+    max-width: 105%;
   }
   &-hover {
     border: 8px solid $green;
     width: 102px;
     height: 102px;
   }
-  
+  &:last-child {
+    margin-right: 0px;
+  }
 }
