--- a/css/main.scss
+++ b/css/main.scss
@@ -41,6 +41,7 @@ body {
 .section {
   height: 100vh;
   min-height: 650px;
+  position: relative;
   &__title{
     text-transform: uppercase;
     font-weight: bold;
