--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,10 @@ $white: white;
 @import "blocks/comment.scss";
 @import "blocks/user.scss";
 @import "blocks/team.scss";
+@import "blocks/contacts.scss";
+@import "blocks/card.scss";
+@import "blocks/footer.scss";
+@import "blocks/social.scss";
 
 body {
   font-size: 16px;
